# compress-image

./: README.md  package-lock.json  package.json  readme_en.md  tailwind.config.js
.agent/: BACKEND-INTEGRATION.md  BUG-JPG-LARGER.md  BUILD-PRODUCTION.md  COMPRESSION-TOOLS-RECOMMENDATION.md  FINAL-IMPROVEMENTS.md  FINAL-STATUS.md  FIX-ACTIONS-LAYOUT.md  FIX-COMPRESSION-DISPLAY.md  FIX-JPG-COMPRESSION.md  FIX-PNG-COMPRESSION.md  FIX-SLOW-FILE-LOADING.md  FIX-STATUS-BAR-UI.md  FIX-STOP-BUTTON-ALIGNMENT.md  IMAGE-PREVIEW-COMPLETE.md  IMAGE-PREVIEW-STATUS.md  JPEGOPTIM-OPTIPNG-PLAN.md  LOG-VIEWER-COMPLETE.md  LOG-VIEWER-FINAL.md  OPEN-FOLDER-AND-FIXES.md  PENDING-FEATURES.md  PRESERVE-FOLDER-STRUCTURE-COMPLETE.md  REVIEW-PLAN.md  SESSION-SUMMARY.md  STATE-PERSISTENCE.md  TESTING-2-FEATURES.md  TESTING-GUIDE.md  WHY-TAURI-CAN-RELOAD.md  implementation-plan.md  progress.md
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: file_ops.rs  mod.rs  preview.rs  process.rs  window.rs
src-tauri/src/core/: config.rs  metadata.rs  mod.rs  pipeline.rs  resize.rs
src-tauri/src/core/compress/: jpeg.rs  mod.rs  png.rs  webp.rs
src-tauri/src/utils/: fs.rs  mod.rs
src/components/file-list/: DropZone.tsx  FileList.tsx  FileRow.tsx
src/components/layout/: Header.tsx  LogViewer.css  LogViewer.tsx  Sidebar.tsx  StatusBar.tsx
src/components/preview/: ImagePreview.tsx  preview.css
src/store/: appStore.ts
src/types/: index.ts
(+4 files in other folders)
