[package]
name = "rusty-pixel-forge"
version = "0.1.0"
description = "Professional Image Optimizer - High Performance Batch Processing"
authors = ["RustyPixel Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rusty_pixel_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# Concurrency
rayon = "1.10"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Image Processing
image = { version = "0.25", features = ["png", "jpeg", "webp", "bmp", "tiff"] }
fast_image_resize = "4.0"
imagequant = "4.3"
png = "0.17"

# Metadata Handling
kamadak-exif = "0.5"
img-parts = "0.3"

# File System
walkdir = "2.5"

# Utilities
base64 = "0.22"
